...
    private var warningTimer = Timer()
    
    private let tapGesture = UITapGestureRecognizer()
    private let longGesture = UILongPressGestureRecognizer()
    
    private let settingsBarBackgroundView = UIView()
    private let backButton = UIButton(type: .custom)
    private let changeResolutionButton = UIButton(type: .custom)
    private let divider = UILabel()
    private let centerDot = UILabel()
    private let changeFPSButton = UIButton(type: .custom)
    private let changeScriptButtonBackgroundView = UIView()
    private let changeScriptButton = UIButton(type: .custom)
    private let changeWBButton = UIButton(type: .custom)
    private let changeISOButton = UIButton(type: .custom)
    private let settingPickerView = UIPickerView()
    
    private let changeSpeedButton = UIButton(type: .custom)
    private let addActorButton = UIButton(type: .custom)
    private var finishEditingAtOnceButton = UIButton(type: .custom)
    private var finishEditingOneByOneButton = UIButton(type: .custom)
    private let changeNameButton = UIButton(type: .custom)
    private let recordButton = UIButton(type: .custom)
    private let stopButton = UIButton(type: .custom)
    
    private let stopwatchBackgroundView = UIView()
    private let stopwatchLabel = UILabel()
    
    //private var subtitlesStackView = UIStackView()
    private var subtitlesNameLabel = UILabel.subtitlesNameLabel(withText: "")
    private var subtitlesPhraseLabel = UILabel.subtitlesPhraseLabel(withText: "")
    
    private let processingQueue = DispatchQueue(label: "processingQueue")
...
