...

import UIKit

class SceneInfoCell: UICollectionViewCell {
    
    var titleLabel = UILabel()
    var deleteButton = UIButton()
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        setupCell()
    }
    
...
