...
    
    // MARK: - Properties
    var presenter: SettingsPresenterProtocol?
    private let resolutionLabel = UILabel()
    private let resolutionPicker = UIPickerView()
    
    private let submitButton = UIButton()
    
    
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        presenter?.viewDidLoad()
...
